--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <div class="timer">
         <i class="fa-regular fa-clock"></i>
         <span class="counter"
-            data-start-hours="12"
-            data-start-minutes="30"
-            data-start-seconds="0"
+            data-end-hours="0"
+            data-end-minutes="10"
+            data-end-seconds="0"
             data-timer-end-message="Data timer end"
         >
             <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span>
